# try-finetuning

./: .gitignore  01_login_hf.py  02_load_model.py  03_train_model.py  03_train_model_intel.py  03_train_model_json.py  04_plot_results.py  05_merge_adapters.py  06_test_finetuned_input.py  06_test_finetuned_multi.py  06_test_finetuned_single.py  07_quantize_gguf.py  Fine_tune_Gemma_3_270M_for_emoji_generation.ipynb  NOTE.md  QWEN3.md  README.md  STEP_GOOGLE.md  STEP_MY_FINETUNING.md  STEP_ORIGIN.md  emotion.md  vertopal.com_Fine_tune_Gemma_3_270M_for_emoji_generation.md
data/: training_data_123_03.json
data/emoji-emotion/: dataset.json
data/onetwothree/: dataset.json  training_data_123_01.json  training_data_123_01_2.json  training_data_123_04.json
data/onetwothree/old/: training_data_123_01_3.json
gemma-finetune/: 00_make_dataset.py  00_make_dataset_sql.py  02_load_dataset.py  03_load_model.py  04_format_dataset.py  05_test_base_model.py  06_configure_training.py  06_configure_training_cpu.py  07_train_model.py  07_train_model_cpu.py  07_train_model_json.py  08_plot_results.py  09_merge_adapters.py  09_merge_adapters_cpu.py  10_test_finetuned.py  10_test_finetuned_input.py  11_get_tokenizer_model.py  12_quantize_gguf.py  README.md  README_CPU.md  README_JSON.md  Tasks.md  main.py  pyproject.toml  training_data.json  training_data_123_first.json  training_data_123_posi.json
google/: Fine-Tune_Gemma_using_Hugging-Face_Transformers_and_QloRA.md
