[project]
name = "gemma-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "datasets>=4.2.0",
    "emoji>=2.15.0",
    "evaluate>=0.4.6",
    "gguf>=0.17.1",
    "huggingface-hub>=0.35.3",
    "matplotlib>=3.10.7",
    "peft>=0.17.1",
    "protobuf>=6.32.1",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.57.0",
    "trl>=0.23.1",
]
